# drawdotipe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  convert.py  pyproject.toml
tests/: __init__.py  test_converter.py
tests/data/: hello.drawio
