[project]
name = "drawdotipe"
version = "0.1.0"
description = "Convert Draw.io diagrams to Ipe XML format for LaTeX workflows"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Thomas Rudolf", email = "thomas.rudolf@kit.edu" }
]
keywords = [
    "drawio",
    "ipe",
    "latex",
    "diagram",
    "conversion",
    "vector-graphics",
    "academic-publishing",
]
dependencies = []

[project.scripts]
drawdotipe = "convert:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.12",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["convert.py"]
